[package]
name = "dns-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
alloy = {version = "0.9.1", features = ["full"]}
eyre = "0.6"
hex = "0.4.3"
tokio = { version = "1.36", features = ["full"] }
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"