[package]
name = "dns-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0.12"
hex = "0.4.3"
reqwest = { version = "0.12.15", features = ["blocking"] }

# Added dependencies
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
dotenv = "0.15"
url = "2.5"
warp = "0.3"
k256 = { version = "0.13.4", features = ["ecdsa-core"] }
ureq = "3.0.10"
anyhow = "1.0.97"

# Alloy dependencies
alloy = { version = "1.0.9", features = ["full","eip712"] }